samples/_failures_safe/1761460704_997e92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3eb5c871.c: In function ‘main’:
./samples/SAFE/__tmp_3eb5c871.c:175:9: error: expected declaration or statement at end of input
  175 |         printf("Compression failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_3eb5c871.c:175:9: error: expected declaration or statement at end of input
